--- a/novi/demo/src/main/resources/static/index.html
+++ b/novi/demo/src/main/resources/static/index.html
@@ -7,13 +7,53 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="Bootstrap/css/bootstrap-theme.min.css">
+
+<style type="text/css">
+
+ .center{
+  margin: auto;
+  padding: 70px 0;
+ 
+</style>
+
 </head>
-<body>
-Hello world
+<body style="background: url('Slike/rsz_1restoran.jpg')">
+
 <script src="Bootstrap/js/jQuery.min.js"></script>
   
-	 
-  
+<div class="container center">
+<div class="row">
+<div class="col-md-4 col-md-offset-4" >
+  <div class="well">
+ <form action="">
+  <table>
+   <tr>
+    <td>Korisnicko ime:</td>
+    <td><input type="text" name="korisnickoIme" class="form-control" /></td>
+   </tr>
+   <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+   </tr>
+   <tr>
+    <td>Sifra:</td>
+    <td><input type="password" name="sifra" class="form-control"/></td>
+   </tr>
+    <tr>
+   	<td>&nbsp;</td>
+   	<td>&nbsp;</td>
+   </tr>
+   <tr>
+    <td>&nbsp;</td>
+    <td><input class="btn btn-success" type="submit" value="Uloguj se" /></td>
+    <td><a href="/Registracija.html">Registruj se</a></td>
+   </tr>
+  </table>
+ </form>
+ </div>  
+</div>
+</div>
+</div>
   
   <!-- Latest compiled and minified JavaScript -->
   <script src="Bootstrap/js/bootstrap.min.js" > </script>
