--- a/novi/demo/src/main/resources/static/stranice/izmenaKorisnika.html
+++ b/novi/demo/src/main/resources/static/stranice/izmenaKorisnika.html
@@ -1,25 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<link rel="stylesheet" href="Bootstrap/css/bootstrap.min.css" >
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="Bootstrap/css/bootstrap-theme.min.css">
-<link rel="stylesheet" type="text/css" href="/myCss.css">
-</head>
-<body>
-
-<div class="container center">
+<div class="container center" ng-contoller="izmenaKorisnikaController">
 <div class="row">
 <div class="col-md-4 col-md-offset-4" >
  <div class="well">
-<form action="/gost/login">
+<form action="">
   <table>
    <tr>
     <td>Ime:</td>
-    <td><input type="text" name="Ime" class="form-control" /></td>
+    <td><input type="text" name="Ime" class="form-control" value={{izmena.ime}} /></td>
    </tr>
    <tr>
    	<td>&nbsp;</td>
@@ -27,7 +15,7 @@
    </tr>
     <tr>
     <td>Prezime:</td>
-    <td><input type="text" name="prezime" class="form-control" /></td>
+    <td><input type="text" name="prezime" class="form-control" value={{izmena.prezime}}/></td>
    </tr>
    <tr>
    	<td>&nbsp;</td>
@@ -35,7 +23,7 @@
    </tr>
     <tr>
     <td>Email adresa:</td>
-    <td><input type="text" name="emailAdresa" class="form-control" /></td>
+    <td><input type="text" name="emailAdresa" class="form-control" value={{izmena.email}}/></td>
    </tr>
    <tr>
    	<td>&nbsp;</td>
@@ -43,7 +31,7 @@
    </tr>   
    <tr>
     <td>Korisnicko ime:</td>
-    <td><input type="text" name="korisnickoIme" class="form-control" /></td>
+    <td><input type="text" name="korisnickoIme" class="form-control" value={{izmena.korisnickoIme}}/></td>
    </tr>
    <tr>
    	<td>&nbsp;</td>
@@ -75,8 +63,3 @@
 </div>
  </div>
 </div>
-
- <!-- Latest compiled and minified JavaScript -->
-  <script src="Bootstrap/js/bootstrap.min.js" > </script>
-</body>
-</html>
