promenjen profil korisnika, prikaz svi restorana iz korisnika, zapocet profil restorana

--- a/novi/demo/src/main/resources/static/index.html
+++ b/novi/demo/src/main/resources/static/index.html
@@ -53,8 +53,11 @@
     <script src="kontroleri/sviGostiController.js"></script>
     <script src="kontroleri/profilKorisnikaController.js"></script>
     <script src="kontroleri/probaController.js"></script>
+    <script src="kontroleri/adminController.js"></script>
+    <script src="kontroleri/gostRestoraniController.js"></script>
     <script src="servisi/sviGostiService.js"></script>
     <script src="servisi/gostService.js"></script>
     <script src="servisi/loginService.js"></script>
+    <script src="servisi/adminService.js"></script>
 </body>
 </html>
