--- a/novi/demo/src/main/resources/static/stranice/gostRestorani.html
+++ b/novi/demo/src/main/resources/static/stranice/gostRestorani.html
@@ -7,10 +7,8 @@
 						</div>
 			
 					<div class="panel-body">
-						<form action="/jelovnik.html">
-							<input type="hidden" name="sifra" value="<%=p.getSifra()%>">
-							<input class="img-responsive" type="image" src="Slike/menu.png"/> 
-						</form>
+							<input class="img-responsive" type="image" src="Slike/menu.png" ng-click='prikaziRestoran(restoran.id)'/> 
+					
 					</div>
 				</div>
 				</div> 
