--- a/novi/demo/src/main/resources/static/meni/gostMeni.html
+++ b/novi/demo/src/main/resources/static/meni/gostMeni.html
@@ -5,7 +5,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a ui-sref="#">Profil</a></li>
-      <li><a ui-sref=".restorani">Restorani</a></li>
+      <li><a ui-sref="restorani">Restorani</a></li>
       <li><a ui-sref="#">Page 2</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
