profil menadzera restorana, prikaz jelovnika,karte pica, dodavaje jela, pica, izmena i brisaje jela i pica

--- a/novi/demo/src/main/resources/static/index.html
+++ b/novi/demo/src/main/resources/static/index.html
@@ -55,9 +55,11 @@
     <script src="kontroleri/probaController.js"></script>
     <script src="kontroleri/adminController.js"></script>
     <script src="kontroleri/gostRestoraniController.js"></script>
+    <script src="kontroleri/restoranController.js"></script>
     <script src="servisi/sviGostiService.js"></script>
     <script src="servisi/gostService.js"></script>
     <script src="servisi/loginService.js"></script>
     <script src="servisi/adminService.js"></script>
+    <script src="servisi/restoranService.js"></script>
 </body>
 </html>
