--- a/novi/demo/src/main/resources/static/stranice/profilAdmin.html
+++ b/novi/demo/src/main/resources/static/stranice/profilAdmin.html
@@ -78,7 +78,7 @@
   											<td>Izaberite restoran: </td>
   											<td>
   												<select name="izabraniRestoran" ng-model="imeRestorana">
-  													<option ng-repeat="restoran in restorani" value={{restoran.ime}}>{{restoran.ime}}</option> 
+  													<option ng-repeat="restoran in restorani" value={{restoran.id}}>{{restoran.ime}}</option> 
 												</select>
   											</td>
   										</tr>
