rad sa menadzerom restorana, zapoceta evidencija radnika

--- a/novi/demo/src/main/resources/static/meni/gostMeni.html
+++ b/novi/demo/src/main/resources/static/meni/gostMeni.html
@@ -4,9 +4,10 @@
       <a class="navbar-brand" href="#">Gost restorana</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a ui-sref="#">Profil</a></li>
+      <li class="active"><a ui-sref="#">Pocetna</a></li>
+      <li><a ui-sref="profilGosta">Profil</a></li>
       <li><a ui-sref="restorani">Restorani</a></li>
-      <li><a ui-sref="#">Page 2</a></li>
+      <li><a ui-sref="prijatelji">Prijatelji</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a ui-sref="#"><span class="glyphicon glyphicon-log-out"></span> Izloguj se</a></li>
