--- a/novi/demo/src/main/resources/static/stranice/profilRestorana.html
+++ b/novi/demo/src/main/resources/static/stranice/profilRestorana.html
@@ -49,3 +49,29 @@
 				</div>
 				</div> 
 </div>
+
+
+<div ng-show="MR" class="row row-eq-height" >
+ 				<div class="col-md-4">
+					<div class="panel panel-default velicina">
+						<div class="panel-heading">Evidencija radnika </div>
+			
+					<div class="panel-body">
+	
+							<input class="img-responsive" type="image" src="Slike/menu.png" ng-click='evidencijaRadnika()'/> 
+					</div>
+				</div>
+				</div>
+				
+				<div class="col-md-4">
+					<div class="panel panel-default velicina">
+						<div class="panel-heading">Ponude</div>
+			
+					<div class="panel-body">
+	
+							<input class="img-responsive" type="image" src="Slike/menu.png" ng-click='ponude()'/> 
+					</div>
+				</div>
+				</div>
+</div>
+
