profil korisnika, prikaz prijatelja, dodavanje prijatelja, odbijanje prijatelja, pretragu treba promeniti

--- a/novi/demo/src/main/resources/static/stranice/profilKorisnika.html
+++ b/novi/demo/src/main/resources/static/stranice/profilKorisnika.html
@@ -14,6 +14,23 @@
 	&nbsp;
 
 	&nbsp;
+	<div ng-show="imaZahteva" class="alert alert-success" role="alert">
+ Imate nove<a href="" class="alert-link" ng-click=prikaziZahteve()>zahteve za prijateljstvo</a>
+</div>
+
+<table class="table table-stripped" ng-show="prikaziPrijatelje">
+	<tr ng-repeat="zahtev in zahtevi">
+		<td>{{zahtev.ime}}</td>
+		<td>{{zahtev.prezime}}</td>
+		<td><a  class="btn btn-default" ng-click="prihvatiPrijatelja(zahtev.id)">
+    		<span class="glyphicon glyphicon-ok"></span> Prihvati
+  			</a>
+  			<a  class="btn btn-default" ng-click="odbijPrijatelja(zahtev.id)">
+    		<span class="glyphicon glyphicon-trash"></span> Odbij
+  			</a></td>
+	</tr>
+</table>
+
   <h1>I S T O R I J A    R E Z E R V A C I J A</h1>
   
   </div>
