dodaradjene provere i jos neke izmene

--- a/novi/demo/src/main/resources/static/index.html
+++ b/novi/demo/src/main/resources/static/index.html
@@ -30,7 +30,17 @@
 
 <link rel="stylesheet" type="text/css" href="/myCss.css">
 
-<script type="text/javascript" src="js/provera.js"></script>
+<script type="text/javascript" src="js/proveraLogin.js"></script>
+<script type="text/javascript" src="js/proveraRegistracija.js"></script>
+<script type="text/javascript" src="js/proveraIzmenaGosta.js"></script>
+<script type="text/javascript" src="js/proveraRestoran.js"></script>
+<script type="text/javascript" src="js/proveraMenadzer.js"></script>
+<script type="text/javascript" src="js/proveraAdmin.js"></script>
+<script type="text/javascript" src="js/proveraJelo.js"></script>
+<script type="text/javascript" src="js/proveraJelaIzmena.js"></script>
+<script type="text/javascript" src="js/proveraPica.js"></script>
+<script type="text/javascript" src="js/proveraPicaIzmena.js"></script>
+
 
 
 </head>
