--- a/novi/demo/src/main/resources/static/stranice/kartaPica.html
+++ b/novi/demo/src/main/resources/static/stranice/kartaPica.html
@@ -1,10 +1,12 @@
+<script type="text/javascript" src="js/proveraPica.js"></script>
+<script type="text/javascript" src="js/proveraPicaIzmena.js"></script>
 <div class="container" ng-controller="restoranController" ng-init="kartaPica(); uzmiRestoran();">
   <div class="jumbotron poluProvidanCrni">
     <h1 style="color:white;">Karta pica</h1>      
   </div>
   <div class="col-xs-6">
-	<div class="well poluProvidanBeo">
-	 <table class="table table-striped">
+ <div class="well poluProvidanBeo">
+  <table class="table table-striped">
     <thead>
       <tr>
         <th>Naziv </th>
@@ -18,13 +20,13 @@
         <td>{{pice.opis}}</td>
         <td>{{pice.cena}}</td>
         <td><a ng-show="MR" class="btn btn-default" ng-click='izmeniPice(pice.id)'>
-    		<span class="glyphicon glyphicon-pencil" ></span> Izmeni
-  			</a>
-  		</td>
-  		 <td ><a ng-show="MR"  class="btn btn-default" ng-click="obrisiPice(pice.id)">
-    		<span class="glyphicon glyphicon-trash" ></span> Obrisi
-  			</a>
-  		</td>
+      <span class="glyphicon glyphicon-pencil" ></span> Izmeni
+     </a>
+    </td>
+     <td ><a ng-show="MR"  class="btn btn-default" ng-click="obrisiPice(pice.id)">
+      <span class="glyphicon glyphicon-trash" ></span> Obrisi
+     </a>
+    </td>
       </tr>
   
     </tbody>
@@ -38,28 +40,28 @@
   <table>
    <tr>
     <td>Naziv:</td>
-    <td><input type="text" name="nazivPica" class="form-control" ng-model="trenutnoPice.naziv" value={{trenutnoPice.naziv}}></input></td>
+    <td><input type="text" name="nazivPicaIzmena" class="form-control" ng-model="trenutnoPice.naziv" value={{trenutnoPice.naziv}} onkeyup="proveraPraznihPoljaPiceIzmena()"/><span id="nazivPicaIzmenaError"></span></td> 
    </tr>
    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>
     <tr>
     <td>Opis:</td>
     <td><input type="text" name="opisPica" class="form-control" ng-model="trenutnoPice.opis"  value={{trenutnoPice.opis}}></input></td>
    </tr>
    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>
     <tr>
     <td>Cena:</td>
-    <td><input type="text" name="cenaPica" class="form-control" ng-model="trenutnoPice.cena" value={{trenutnoPice.cena}} ></input></td>
+    <td><input type="text" name="cenaPicaIzmena" class="form-control" ng-model="trenutnoPice.cena" value={{trenutnoPice.cena}} onkeyup="proveraPraznihPoljaPiceIzmena()"/><span id="cenaPicaIzmenaError"></span></td> 
    </tr>
    
    <tr>
     <td>&nbsp;</td>
-    <td><input class="btn btn-success" type="submit" value="SaÄuvaj izmene"  ng-click="izmeniPice2(trenutnoPice)"/></td>
+    <td><input class="btn btn-success" id="izmeniPice" type="submit" value="SaĂ„ÂŤuvaj izmene"  onclick="proveraPraznihPoljaPiceIzmena()" ng-click="izmeniPice2(trenutnoPice)"/></td>
    </tr>
   </table>
  </form>
@@ -72,39 +74,41 @@
   <table>
    <tr>
     <td>Naziv:</td>
-    <td><input type="text" name="nazivPica" class="form-control" ng-model="novoPice.naziv"></input></td>
+    <td><input type="text" id="nazivPica" name="nazivPica" class="form-control" ng-model="novoPice.naziv" onkeyup="proveraPraznihPoljaPice()"/><span id="nazivPicaError"></span></td> 
    </tr>
    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>
     <tr>
     <td>Opis:</td>
     <td><input type="text" name="opisPica" class="form-control" ng-model="novoPice.opis"></input></td>
    </tr>
    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>
     <tr>
     <td>Cena:</td>
-    <td><input type="text" name="cenaPica" class="form-control" ng-model="novoPice.cena" ></input></td>
+    <td><input type="text" id="cenaPica" name="cenaPica" class="form-control" ng-model="novoPice.cena" onkeyup="proveraPraznihPoljaPice()"/><span id="cenaPicaError"></span></td> 
    </tr>
    <tr>
    <td>Vrsta pica:</td>
-   	<td>
-   		<select name="vrstaJela" ng-model="novoPice.vrstaP">
-   			<option value="0">Alkoholna</option>
-   			<option value="1">Bezalkoholna</option>
-   			<option value="2"> Topli napici</option>
-   			<option value="3"> Zestina</option>		
-   		</select>
-   	</td>	
+    <td>
+     <select name="vrstaJela" id= "vrstaPica" ng-model="novoPice.vrstaP" onkeyup="proveraPraznihPoljaPice()">
+      <option value="0">Alkoholna</option>
+      <option value="1">Bezalkoholna</option>
+      <option value="2"> Topli napici</option>
+      <option value="3"> Zestina</option>  
+     </select>
+     <span id="vrstaPicaError"></span>
+    </td> 
    </tr>
    
    <tr>
     <td>&nbsp;</td>
-    <td><input class="btn btn-success" type="submit" value="SaÄuvaj izmene"  ng-click="dodajPice2(novoPice)"/></td>
+    <td><input class="btn btn-success" id="dodajPice" type="submit" value="Dodaj piće"  onclick="proveraPraznihPoljaPice()" ng-click="dodajPice2(novoPice)"/></td>
+    
    </tr>
   </table>
  </form>
@@ -112,6 +116,6 @@
 </div> 
   
   <a ng-show="MR" class="btn btn-default" ng-click="dodajPice()">
-    		<span class="glyphicon glyphicon-glass"></span> Dodaj pice
-  			</a> 
+      <span class="glyphicon glyphicon-glass"></span> Dodaj pice
+     </a> 
 </div>
