--- a/novi/demo/src/main/resources/static/stranice/Registracija.html
+++ b/novi/demo/src/main/resources/static/stranice/Registracija.html
@@ -1,70 +1,93 @@
 
 
-<script type="text/javascript" src="js/provera.js"></script>
+<script type="text/javascript" src="js/proveraRegistracija.js"></script>
+<!--  <link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
+<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script> -->
+<script type="text/javascript" >
+/*function readURL(input) {
+ console.log("lala" + input)
+    if (input.files && input.files[0]) {
+        var reader = new FileReader();
+
+        reader.onload = function (e) {
+            $('#blah')
+                .attr('src', e.target.result)
+                .width(150)
+                .height(200);
+        };
+
+        reader.readAsDataURL(input.files[0]);
+    }
+}
+*/
+
+</script> 
+
 <div class="container center" ng-controller='registracijaController'>
 <div class="row">
 <div class="col-md-4 col-md-offset-4" >
  <div class="well">
-<form >
+<form enctype="multipart/form-data">
   <table>
    <tr>
     <td>Ime:</td>
-    <td><input type="text" id="ime" name="Ime" class="form-control" ng-model="gost.ime" /></td>
-   </tr>
-   <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
-   </tr>
-    <tr>
-    <td>Prezime:</td>
-    <td><input type="text" name="prezime" class="form-control" ng-model="gost.prezime"/></td>
-   </tr>
-   <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
-   </tr>
-    <tr>
-    <td>Email adresa:</td>
-    <td><input type="text" name="emailAdresa" class="form-control" ng-model="gost.email"/></td>
-   </tr>
-   <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
-   </tr>   
-   <tr>
-    <td>Korisnicko ime:</td>
-    <td><input type="text" name="korisnickoIme" class="form-control" ng-model="gost.korisnickoIme"/></td>
-   </tr>
-   <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
-   </tr>
-   <tr>
-    <td>Sifra:</td>
-    <td><input type="password" id="sifra"  name="sifra" class="form-control" ng-model="gost.sifra"/></td>
-   </tr>
-   <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
-   </tr>
-   <tr>
-    <td>Ponvite sifru:</td>
-   
-    <td><input type="password" id="sifra2" name="sifra2" class="form-control" ng-model="sifra2" onkeyup="proveraSifre()"/></td>
-    
-   </tr>
-   <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
-   </tr>
-
-    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td><input type="text" id="ime" name="Ime" class="form-control" ng-model="gost.ime" onkeyup="proveraPraznihPoljaReg()"/><span id="imeError"></span></td>
    </tr>
    <tr>
     <td>&nbsp;</td>
-    <td><input id="dugmeRegistruj" class="btn btn-success" type="submit" value="registruje se" ng-click='registruj(gost)' onclick="proveraPraznihPolja()" /></td>
+    <td>&nbsp;</td>
+   </tr>
+    <tr>
+    <td>Prezime:</td>
+    <td><input type="text" id="prezime" name="prezime" class="form-control" ng-model="gost.prezime" onkeyup="proveraPraznihPoljaReg()"/><span id="prezimeError"></span></td>
+   </tr>
+   <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+   </tr>
+    <tr>
+    <td>Email adresa:</td>
+    <td><input type="text" id="email" name="emailAdresa" class="form-control" ng-model="gost.email" onkeyup="proveraPraznihPoljaReg()"/><span id="emailError"></span></td>
+   </tr>
+   <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+   </tr>   
+   <tr>
+    <td>Korisnicko ime:</td>
+    <td><input type="text" id="korisnickoIme" name="korisnickoIme" class="form-control" ng-model="gost.korisnickoIme" onkeyup="proveraPraznihPoljaReg()"/><span id="korisnickoImeError"></span></td>
+   </tr>
+   <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+   </tr>
+   <tr>
+    <td>Sifra:</td>
+    <td><input type="password"  id="sifra"  name="sifra" class="form-control" ng-model="gost.sifra" onkeyup="proveraPraznihPoljaReg()"/><span id="sifra1Error"></span></td>
+   </tr>
+   <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+   </tr>
+   <tr>
+    <td>Ponovite sifru:</td>
+   
+    <td><input type="password" id="sifra2" name="sifra2" class="form-control" ng-model="sifra2"  onkeyup="proveraPraznihPoljaReg() "/><span id="sifra2Error"></span></td>
+    
+   </tr>
+   <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+   </tr>
+
+    <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+   </tr>
+   <tr>
+    <td>&nbsp;</td>
+    <td><input id="dugmeRegistruj" class="btn btn-success" type="submit" value="Registruj se" onclick="proveraPraznihPoljaReg()" ng-click='registruj(gost)' /></td>
    </tr>
   </table>
  </form>
