--- a/novi/demo/src/main/resources/static/stranice/jelovnik.html
+++ b/novi/demo/src/main/resources/static/stranice/jelovnik.html
@@ -1,9 +1,11 @@
+<script type="text/javascript" src="js/proveraJelo.js"></script>
+<script type="text/javascript" src="js/proveraJelaIzmena.js"></script>
 <div class="container" ng-controller='restoranController' ng-init="jelovnik(); uzmiRestoran();">
   <div class="jumbotron poluProvidanBeo">
     <h1>Jelovnik</h1>      
   </div>
-	<div class="well poluProvidanSivi">
-	 <table class="table table-striped">
+ <div class="well poluProvidanSivi">
+  <table class="table table-striped">
     <thead>
       <tr>
         <th>Naziv {{gost}} </th>
@@ -17,14 +19,14 @@
         <td>{{jelo.opis}}</td>
         <td>{{jelo.cena}}</td>
        
-  		<td><a ng-show="MR" class="btn btn-default" ng-click="izmeniJelo(jelo.id)">
-    		<span class="glyphicon glyphicon-pencil"></span> Izmeni
-  			</a>
-  		</td>
-  		 <td><a ng-show="MR" class="btn btn-default" ng-click="obrisiJelo(jelo.id)">
-    		<span class="glyphicon glyphicon-trash"></span> Obrisi
-  			</a>
-  		</td>
+    <td><a ng-show="MR" class="btn btn-default" ng-click="izmeniJelo(jelo.id)">
+      <span class="glyphicon glyphicon-pencil"></span> Izmeni
+     </a>
+    </td>
+     <td><a ng-show="MR" class="btn btn-default" ng-click="obrisiJelo(jelo.id)">
+      <span class="glyphicon glyphicon-trash"></span> Obrisi
+     </a>
+    </td>
       </tr>
   
     </tbody>
@@ -37,28 +39,28 @@
   <table>
    <tr>
     <td>Naziv:</td>
-    <td><input type="text" name="nazivJela" class="form-control" value={{trenutnoJelo.naziv}} ng-model="trenutnoJelo.naziv"/></td>
+    <td><input type="text" id= "nazivJelaIzmena" name="nazivJela" class="form-control" value={{trenutnoJelo.naziv}} ng-model="trenutnoJelo.naziv" onkeyup="proveraPraznihPoljaJelaIzmena()"/><span id="nazivJelaIzmenaError"></span></td> 
    </tr>
    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>
     <tr>
     <td>Opis:</td>
     <td><input type="text" name="opisJela" class="form-control"  value={{trenutnoJelo.opis}} ng-model="trenutnoJelo.opis"/></td>
    </tr>
    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>
     <tr>
     <td>Cena:</td>
-    <td><input type="text" name="cenaJela" class="form-control" value={{trenutnoJelo.cena}} ng-model="trenutnoJelo.cena"/></td>
+    <td><input type="text" id="cenaJelaIzmena" name="cenaJela" class="form-control" value={{trenutnoJelo.cena}} ng-model="trenutnoJelo.cena" onkeyup="proveraPraznihPoljaJelaIzmena()"/><span id="cenaJelaIzmenaError"></span></td> 
    </tr>
    
    <tr>
     <td>&nbsp;</td>
-    <td><input class="btn btn-success" type="submit" value="SaÄuvaj izmene" ng-click="izmeniJelo2(trenutnoJelo)"/></td>
+    <td><input class="btn btn-success" type="submit" id="izmeniJelo" value="SaĂ„ÂŤuvaj izmene" onclick="proveraPraznihPoljaJelaIzmena()" ng-click="izmeniJelo2(trenutnoJelo)"/></td>
    </tr>
   </table>
  </form>
@@ -72,37 +74,38 @@
   <table>
    <tr>
     <td>Naziv:</td>
-    <td><input type="text" name="nazivJela" class="form-control"  ng-model="novoJelo.naziv"/></td>
+    <td><input type="text" id="nazivJela" name="nazivJela" class="form-control"  ng-model="novoJelo.naziv" onkeyup="proveraPraznihPoljaJelo()"/><span id="nazivJelaError"></span></td>
    </tr>
    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>
     <tr>
     <td>Opis:</td>
     <td><input type="text" name="opisJela" class="form-control" ng-model="novoJelo.opis"/></td>
    </tr>
    <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>
     <tr>
     <td>Cena:</td>
-    <td><input type="text" name="cenaJela" class="form-control" ng-model="novoJelo.cena"/></td>
+    <td><input type="text" id="cenaJela" name="cenaJela" class="form-control" ng-model="novoJelo.cena" onkeyup="proveraPraznihPoljaJelo()"/><span id="cenaJelaError"></span></td>
    </tr>
    <tr>
    <td>Vrsta jela:</td>
-   	<td>
-   		<select name="vrstaJela" ng-model="novoJelo.vrstaJela">
-   			<option value="0">Salata</option>
-   			<option value="1">Kuvano jelo</option>
-   			<option value="2">Peceno jelo</option>	
-   		</select>
-   	</td>	
+    <td>
+     <select id="vrstaJela" name="vrstaJela" ng-model="novoJelo.vrstaJela" onkeyup="proveraPraznihPoljaJelo()">
+      <option value="0">Salata</option>
+      <option value="1">Kuvano jelo</option>
+      <option value="2">Peceno jelo</option> 
+     </select>
+     <span id="vrstaJelaError"></span></td>
+    </td> 
    </tr>
    <tr>
     <td>&nbsp;</td>
-    <td><input class="btn btn-success" type="submit" value="Dodaj jelo" ng-click="dodajJelo2(novoJelo)"/></td>
+    <td><input class="btn btn-success" type="submit" id="dodajJelo" value="Dodaj jelo" onclick="proveraPraznihPoljaJelo()" ng-click="dodajJelo2(novoJelo)"/></td>
    </tr>
   </table>
  </form>
@@ -111,6 +114,6 @@
 
 
  <a ng-show="MR" class="btn btn-default" ng-click="dodajJelo()">
-    		<span class="glyphicon glyphicon-add"></span> Dodaj jelo
-  			</a>
+      <span class="glyphicon glyphicon-add"></span> Dodaj jelo
+     </a>
 </div>
