--- a/novi/demo/src/main/resources/static/stranice/login.html
+++ b/novi/demo/src/main/resources/static/stranice/login.html
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="js/proveraLogin.js"></script>
 <div class="container center" ng-controller='loginController'>
 <div class="row">
 <div class="col-md-5 col-md-offset-4" >
@@ -6,7 +7,8 @@
   <table>
    <tr>
     <td>Korisnicko ime:</td>
-    <td><input type="text" name="korisnickoIme" class="form-control" ng-model="gost.korisnickoIme"/></td>
+    <td><input type="text" id="imelogin" name="korisnickoIme"  class="form-control"  ng-model="gost.korisnickoIme" onkeyup="proveraPraznihPoljaLogin()"/></td>
+   <td> <span id="imeloginError"></span></td>
    </tr>
    <tr>
     <td>&nbsp;</td>
@@ -14,16 +16,16 @@
    </tr>
    <tr>
     <td>Sifra:</td>
-    <td><input type="password" name="sifra" class="form-control" ng-model="gost.sifra"/></td>
+    <td><input type="password"  id="sifralogin" name="sifra"  class="form-control"  ng-model="gost.sifra" onkeyup="proveraPraznihPoljaLogin()"/></td>
+   <td> <span id="sifraloginError"></span></td>
    </tr>
     <tr>
-   	<td>&nbsp;</td>
-   	<td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
    </tr>
-   
    <tr>
     <td>&nbsp;</td>
-    <td><a href="#" ng-click="login(gost)" class="btn btn-success" >Uloguj se</a></td>
+    <td><a href="#" id="dugmeLogin" onclick="proveraPraznihPoljaLogin()" ng-click="login(gost)" class="btn btn-success" >Uloguj se</a></td>
     <td><a href="#/registruj">Registruj se</a></td>
     <td><a href="/profilRestorana.html">Profil restorana</a></td>
    </tr>
