uradjeno dodavanje namirnica, ponudjaca, ponuda menadzera restorana, profil ponudjaca, prikaz ponuda, dodavanje ponuda ponudjaca

--- a/novi/demo/src/main/resources/static/index.html
+++ b/novi/demo/src/main/resources/static/index.html
@@ -52,6 +52,14 @@
 	<div ui-view></div>
 <script src="Bootstrap/js/jQuery.min.js"></script>
  <button onclick="proveraSifre()">nesto</button>
+      <!-- Extra JavaScript/CSS added manually in "Settings" tab -->
+<!-- Include jQuery -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
+<!-- Include Date Range Picker -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
+ 
 
 <script src="kontroleri/app.js"></script>
 
@@ -66,10 +74,12 @@
     <script src="kontroleri/adminController.js"></script>
     <script src="kontroleri/gostRestoraniController.js"></script>
     <script src="kontroleri/restoranController.js"></script>
+    <script src="kontroleri/ponudjacController.js"></script>
     <script src="servisi/sviGostiService.js"></script>
     <script src="servisi/gostService.js"></script>
     <script src="servisi/loginService.js"></script>
     <script src="servisi/adminService.js"></script>
     <script src="servisi/restoranService.js"></script>
+    <script src="servisi/ponudjacService.js"></script>
 </body>
 </html>
