--- a/novi/demo/src/main/resources/static/stranice/profilRestorana.html
+++ b/novi/demo/src/main/resources/static/stranice/profilRestorana.html
@@ -69,7 +69,7 @@
 			
 					<div class="panel-body">
 	
-							<input class="img-responsive" type="image" src="Slike/menu.png" ng-click='ponude()'/> 
+							<input class="img-responsive" type="image" src="Slike/menu.png" ng-click='prikaziponudeMeni()'/> 
 					</div>
 				</div>
 				</div>
