--- a/novi/demo/src/main/resources/static/stranice/profilRestorana.html
+++ b/novi/demo/src/main/resources/static/stranice/profilRestorana.html
@@ -31,7 +31,7 @@
 			
 					<div class="panel-body">
 				
-							<input class="img-responsive" type="image" src="Slike/sto.jpg"/> 
+							<input class="img-responsive" type="image" src="Slike/sto.jpg" ng-click="rezervacijaStola()"/> 
 				
 					</div>
 				</div>
