profil radnika, dodavanje radnika, izmena radnika,kalendar

--- a/novi/demo/src/main/resources/static/index.html
+++ b/novi/demo/src/main/resources/static/index.html
@@ -47,11 +47,11 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui/0.4.0/angular-ui.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.4/ui-bootstrap-tpls.min.js"></script>
 
-<body style="background: url('Slike/rsz_1restoran.jpg')">
+<body style="background: url('Slike/rezervacija1.jpg')">
 
 	<div ui-view></div>
 <script src="Bootstrap/js/jQuery.min.js"></script>
- <button onclick="proveraSifre()">nesto</button>
+
       <!-- Extra JavaScript/CSS added manually in "Settings" tab -->
 <!-- Include jQuery -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -75,11 +75,13 @@
     <script src="kontroleri/gostRestoraniController.js"></script>
     <script src="kontroleri/restoranController.js"></script>
     <script src="kontroleri/ponudjacController.js"></script>
+    <script src="kontroleri/radnikController.js"></script>
     <script src="servisi/sviGostiService.js"></script>
     <script src="servisi/gostService.js"></script>
     <script src="servisi/loginService.js"></script>
     <script src="servisi/adminService.js"></script>
     <script src="servisi/restoranService.js"></script>
     <script src="servisi/ponudjacService.js"></script>
+    <script src="servisi/radnikService.js"></script>
 </body>
 </html>
