--- a/novi/demo/src/main/resources/static/meni/gostMeni.html
+++ b/novi/demo/src/main/resources/static/meni/gostMeni.html
@@ -10,7 +10,7 @@
       <li><a ui-sref="prijatelji">Prijatelji</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a ui-sref="#"><span class="glyphicon glyphicon-log-out"></span> Izloguj se</a></li>
+      <li><a ui-sref="izlogujSe"><span class="glyphicon glyphicon-log-out"></span> Izloguj se</a></li>
     </ul>
   </div>
 </nav>
